# slackbot

./: README.md  README.rst  app.py  dev-setup.sh  env.example  pyproject.toml  requirements.txt  setup.bash  slackbot-camera-install.sh  slackbot-install.sh
camera/: bootstrap.sh  camera.py  camera.service  env.example
slackbot/: bootstrap.sh  env.example  pyproject.toml  slackbot.py  slackbot.service
tests/: test_slackbot.py
